# gpn_hacaton

./: .gitignore  README.md  evaluate.py  pyproject.toml  sanity_check.py
baseline/: __init__.py  docling_baseline.py  evaluate_md.py  marker_baseline.py  marker_converter.py  reprocess_md.py  table_cleanup.py  text_cleanup.py
dataset/public/baseline_results/: document_001.md  document_002.md  document_003.md  document_004.md  document_005.md  document_006.md  document_007.md  document_008.md  document_009.md  document_010.md  document_011.md  document_012.md  document_013.md  document_014.md  document_015.md  document_016.md  document_017.md  document_018.md  document_019.md  document_020.md  document_021.md  document_022.md  document_023.md  document_024.md  document_025.md  document_026.md  document_027.md  document_028.md  document_029.md  document_030.md  document_031.md  document_032.md  document_033.md  document_034.md  document_035.md  document_036.md  document_037.md  document_038.md  document_039.md  document_040.md  (+60 more)
