[project]
name = "pdf-parsing-baseline"
version = "0.1.0"
description = "Baseline (Docling) для парсинга PDF в Markdown + публичный датасет"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Hackathon Organizers" }]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docling>=2.0",
    "lxml>=6.0.4",
    "opencv-python-headless>=4.8,<5",
    "pillow>=10.4.0",
    "pypdf>=5.5.0",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
# Опционально: альтернативный конвертер (тяжёлые зависимости; на Python 3.13 может потребоваться 3.12)
marker = ["marker-pdf>=1.10.2"]

[project.scripts]
baseline-docling = "baseline.docling_baseline:main"
evaluate-md = "baseline.evaluate_md:main"
build-submission = "baseline.evaluate_md:build_submission_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baseline"]
